# mantella-chat-plugin

./: .gitignore  CHAT_PLUGIN_DESIGN.md  CMakeLists.txt  Dockerfile.build  Makefile  README.md  vcpkg.json  xmake.lua
.github/workflows/: build.yml
cmake/: msvc-wine-toolchain.cmake
cmake/triplets/: x64-windows-mwine.cmake
src/: InputHandler.cpp  InputHandler.h  PrismaUI_API.h  main.cpp  skse_minimal.h
view/: app.js  index.html  styles.css
